--- a/rapport.tex
+++ b/rapport.tex
@@ -37,6 +37,7 @@
 \usepackage{dsfont}
 \usepackage[normalem]{ulem}
 \usepackage{amssymb} % for mathbb
+\usepackage{outlines}
 
 % for diagrams
 \usepackage{tikz}
@@ -134,9 +135,9 @@ pdftitle=
 \cleardoublepage
 % \include{abstract}
 % \cleardoublepage
-\include{part1}
-\cleardoublepage
-\include{part2}
+%\include{part1_alkemics}
+%\cleardoublepage
+%\include{part2a_cbow}
 \cleardoublepage
 \include{part3}
 \cleardoublepage
